5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1716_2496.log
== SUBMITION (2019-05-09 16:16:46) 
-- CODE:
num = int(input("Digite um numero: "))

soma = 0 

while( num != -1):
	
	soma = soma + num
	
   num = int(input("Digite outro numero: "))
	print(soma)
	
	

	
		
-- EXECUTION TIME:
0.153364
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 9
    num = int(input())
                     ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:16:46) 
-- CODE:
num = int(input("Digite um numero: "))

soma = 0 

while( num != -1):
	
	soma = soma + num
	
   num = int(input("Digite outro numero: "))
	print(soma)
	
	

	
		
-- ERROR:
File "XXXX", line 9
    num = int(input())
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:17:04) 
-- CODE:
num = int(input("Digite um numero: "))

soma = 0 

while( num != -1):
	
	soma = soma + num
	
num = int(input("Digite outro numero: "))
	print(soma)
	
	

	
		
-- ERROR:
File "XXXX", line 10
    print(soma)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:17:09) 
-- CODE:
num = int(input("Digite um numero: "))

soma = 0 

while( num != -1):
	
	soma = soma + num
	
num = int(input("Digite outro numero: "))
print(soma)
	
	

	
		
-- ERROR:
File "XXXX", line 10
    print(soma)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:17:11) 
-- CODE:
num = int(input("Digite um numero: "))

soma = 0 

while( num != -1):
	
	soma = soma + num
	
num = int(input("Digite outro numero: "))
print(soma)
	
	

	
		
-- ERROR:
File "XXXX", line 10
    print(soma)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:17:48) 
-- CODE:
num = int(input("Digite um numero: "))

soma = 0 

while( num != -1):
	
	soma = soma + num
	
num = int(input("Digite outro numero: "))
print(soma)
	
	

	
		
-- ERROR:
File "XXXX", line 10
    print(soma)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:18:19) 
-- CODE:
num = int(input("Digite um numero: "))

soma = 0 

while( num != -1):
	
	soma = soma + num
	
	num = int(input("Digite outro numero: "))
print(soma)
	
	

	
		
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:18:33) 
-- CODE:
num = int(input("Digite um numero: "))

soma = 0 

while( num != -1):
	
	soma = soma + num
	
	num = int(input("Digite outro numero: "))
print(soma)
	
	

	
		
-- EXECUTION TIME:
0.330204
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:24:01) 
-- CODE:
num = int(input("Digite um numero: "))

soma = 0 

while( num != -1):
	
	soma = soma + num
	
num = int(input("Digite outro numero: "))
print(soma)
	
	

	
		
-- EXECUTION TIME:
410.734
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:04:04) 
-- CODE:
num = int(input("Digite um numero: "))

soma = 0 

while( num != -1):
	
	soma = soma + num
	
	num = int(input("Digite outro numero: "))
print(soma)
	
	

	
		
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:04:07) 
-- CODE:
num = int(input("Digite um numero: "))

soma = 0 

while( num != -1):
	
	soma = soma + num
	
	num = int(input("Digite outro numero: "))
print(soma)
	
	

	
		
-- EXECUTION TIME:
0.133996
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
